@@ -1,3 +1,8 @@
+2007-06-26  Milan Zamazal  <pdm@brailcom.org>
+
+	* src/modules/festival_client.c (festivalGetVoices): Return
+	language and dialect codes instead of names.
+
 2007-06-25  Milan Zamazal  <pdm@brailcom.org>
 
 	* src/modules/module_utils.h (CLEAN_OLD_SETTINGS_TABLE)
